# ChangeLog for app-emacs/po-mode
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/po-mode/ChangeLog,v 1.36 2014/01/18 19:57:55 ago Exp $

  18 Jan 2014; Agostino Sarubbo <ago@gentoo.org> po-mode-0.18.3.1.ebuild:
  Stable for alpha, wrt bug #491914

  15 Jan 2014; Agostino Sarubbo <ago@gentoo.org> po-mode-0.18.3.1.ebuild:
  Stable for ia64, wrt bug #491914

  24 Dec 2013; Agostino Sarubbo <ago@gentoo.org> po-mode-0.18.3.1.ebuild:
  Stable for x86, wrt bug #491914

  23 Dec 2013; Agostino Sarubbo <ago@gentoo.org> po-mode-0.18.3.1.ebuild:
  Stable for sparc, wrt bug #491914

  22 Dec 2013; Agostino Sarubbo <ago@gentoo.org> po-mode-0.18.3.1.ebuild:
  Stable for ppc64, wrt bug #491914

  21 Dec 2013; Agostino Sarubbo <ago@gentoo.org> po-mode-0.18.3.1.ebuild:
  Stable for ppc, wrt bug #491914

  11 Dec 2013; Chema Alonso <nimiux@gentoo.org> po-mode-0.18.3.1.ebuild:
  Stable for amd64 wrt bug #491914

  01 Dec 2013; Markus Meier <maekke@gentoo.org> po-mode-0.18.3.1.ebuild:
  arm stable, bug #491914

  26 Nov 2013; Jeroen Roovers <jer@gentoo.org> po-mode-0.18.3.1.ebuild:
  Stable for HPPA (bug #491914).

*po-mode-0.18.3.1 (17 Sep 2013)

  17 Sep 2013; Ulrich Müller <ulm@gentoo.org> -po-mode-0.17.ebuild,
  po-mode-0.18.1.1.ebuild, +po-mode-0.18.3.1.ebuild,
  -files/51po-mode-gentoo.el:
  Version bump. Drop ~sparc-fbsd keyword. Remove old.

  09 May 2012; Alexis Ballier <aballier@gentoo.org> po-mode-0.18.1.1.ebuild:
  keyword ~amd64-fbsd

  15 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> po-mode-0.18.1.1.ebuild:
  ppc64 stable wrt #361635

  26 May 2011; Brent Baude <ranger@gentoo.org> po-mode-0.18.1.1.ebuild:
  Marking po-mode-0.18.1.1 ppc for bug 361635

  23 Apr 2011; Raúl Porcel <armin76@gentoo.org> po-mode-0.18.1.1.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #361635

  12 Apr 2011; Markus Meier <maekke@gentoo.org> po-mode-0.18.1.1.ebuild:
  arm stable, bug #361635
