@@ -1,6 +1,12 @@
 # ChangeLog for app-emacs/po-mode
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/po-mode/ChangeLog,v 1.36 2014/01/18 19:57:55 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/po-mode/ChangeLog,v 1.37 2014/02/12 07:22:58 ulm Exp $
+
+*po-mode-0.18.3.2 (12 Feb 2014)
+
+  12 Feb 2014; Ulrich Müller <ulm@gentoo.org> -po-mode-0.18.1.1.ebuild,
+  +po-mode-0.18.3.2.ebuild:
+  Version bump. Remove old.
 
   18 Jan 2014; Agostino Sarubbo <ago@gentoo.org> po-mode-0.18.3.1.ebuild:
   Stable for alpha, wrt bug #491914
